--- a/messagekit.html
+++ b/messagekit.html
@@ -51,11 +51,9 @@
             height:50px;
             width:60%;
             display: flex;
-            border: double 3px transparent;
+            border: 2px #F49F43 solid ;
             border-radius: 20px;
-            background-image: linear-gradient(black, black), linear-gradient(to bottom right, #FFB25F, #F49F43, #FF8500);
-            background-origin: border-box;
-             background-clip: content-box, border-box;
+            background-color: black;
              color:white;
              text-emphasis-color: white;
              font-size:30px;
@@ -126,6 +124,8 @@
             <p style="color:white;">You can currently only access MessageKit with a unique redeem code.</p>
             <br>
             <input id="codepicker" type="text" style="text-transform:uppercase">
+            <br>
+            <br>
             <a class="a" onclick="submit()">Submit</a>
         </div>
 
