--- a/messagekit.html
+++ b/messagekit.html
@@ -103,7 +103,7 @@
                 <h2>You've unlocked MessageKit Mark I.</h2>
                 <div style="display:block">
                     <br>
-                    <a class="a" href="">Download</a>
+                    <a class="a" href="https://www.icloud.com/shortcuts/309756ffd69c4fbdaea75342d5999ca8">Download</a>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <h2>You've unlocked MessageKit Mark I Lite.</h2>
                 <div style="display:block">
                     <br>
-                    <a class="a" href="">Download</a>
+                    <a class="a" href="https://www.icloud.com/shortcuts/a50eef95b0264168aa2a9cbd3778d77c">Download</a>
                 </div>
             </div>
         </div>
