--- a/messagekit.html
+++ b/messagekit.html
@@ -138,7 +138,7 @@
         function submit()
         {
             const codes = ["12TRKF7GD8DF", "AMO9ZEOX900E", "S6ZJ0R3N17IT", "KQ18E9238T35", "28A9K98F8Y5R", "L5G593VG8XX8"];
-            const litecodes = ["JYF5A80VQ08N"];
+            const litecodes = [""];
 
 
             if(codes.includes(document.getElementById("codepicker").value.toUpperCase())){
