--- a/messagekit.html
+++ b/messagekit.html
@@ -95,7 +95,7 @@
     <center>
         <div>
         <div class="centered-div" id="failed" style="display: none;">
-            <h2>That code didn't seem to work, refresh the page and try again.</h2>
+            <h2>That code is invalid or has already been used. Please reload to retry.</h2>
         </div>
         </div>
         <div id="success" class="centered-div" style="display: none;">
