--- a/messagekit.html
+++ b/messagekit.html
@@ -103,7 +103,7 @@
                 <h2>You've unlocked MessageKit Mark I.</h2>
                 <div style="display:block">
                     <br>
-                    <a class="a" href="https://www.icloud.com/shortcuts/f39bed6dece246c88901f4bca5660ac4">Download</a>
+                    <a class="a" href="https://www.icloud.com/shortcuts/f2d63962f0c94d5cb72ff3821ba17793">Download</a>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
     <script>
         function submit()
         {
-            const codes = ["12TRKF7GD8DF", "AMO9ZEOX900E", "S6ZJ0R3N17IT", "KQ18E9238T35", "28A9K98F8Y5R", "L5G593VG8XX8"];
+            const codes = ["AMO9ZEOX900E", "S6ZJ0R3N17IT", "KQ18E9238T35", "28A9K98F8Y5R", "L5G593VG8XX8"];
             const litecodes = [];
 
 
