--- a/messagekit.html
+++ b/messagekit.html
@@ -83,12 +83,6 @@
             font-size: 20px;
             cursor:pointer;
         }
-
-        @media only screen and (max-width: 768px) {
-            .banner{
-                width:90%;
-            }
-        }
     </style>
 </head>
 <body>
@@ -99,7 +93,7 @@
         <h1 class="logotext">MessageKit</h1>
     </header>
     <center>
-        <a href="https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175"><img class="banner" src="messagekitnewestbanner.png" style="width:500px; border-radius: 20px; margin-top:30px;"></a>
+        <a href="https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175"><img class="banner" src="messagekitnewestbanner.png" style="width:90%; border-radius: 20px; margin-top:30px;"></a>
 
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
         <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote on r/Shortcuts</a>
