--- a/messagekit.html
+++ b/messagekit.html
@@ -93,7 +93,7 @@
         <h1 class="logotext">MessageKit</h1>
     </header>
     <center>
-        <img onclick="downloadnew()" class="banner" src="messagekitnewestbanner.png" style="width:90%; border-radius: 20px; margin-top:30px;">
+        <img id="updatebannerimg" onclick="downloadnew()" class="banner" src="messagekitnewestbanner.png" style="width:90%; border-radius: 20px; margin-top:30px;">
 
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
         <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote on r/Shortcuts</a>
@@ -160,7 +160,7 @@
 
         function downloadnew(){
             window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175");
-            window.close();
+            document.getElementById("updatebannerimg").src="messagekitclickdone.png";
         }
         
     </script>
