--- a/messagekit.html
+++ b/messagekit.html
@@ -159,7 +159,7 @@
         }
 
         function downloadnew(){
-            window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175");
+            window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175", '_blank').focus();
             window.close();
             document.getElementById("updatebannerimg").src="messagekitclickdone.png";
         }
