--- a/messagekit.html
+++ b/messagekit.html
@@ -160,7 +160,8 @@
 
         function downloadnew(){
             document.getElementById("updatebannerimg").src="messagekitclickdone.png";
-            window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175", '_blank').focus();
+
+            window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175", '_blank');
             window.close();
         }
         
