--- a/messagekit.html
+++ b/messagekit.html
@@ -159,8 +159,11 @@
         }
 
         function downloadnew(){
+            var link = document.createElement("a")
+            link.href = "https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175"
+            link.target = "_blank"
+            link.click()
             document.getElementById("updatebannerimg").src="messagekitclickdone.png";
-            window.open("https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175");
         }
         
     </script>
