--- a/messagekit.html
+++ b/messagekit.html
@@ -94,8 +94,11 @@
     </header>
     <center>
         <img id="updatebannerimg" class="banner" src="messagekitnewestbanner.png" style="width:90%; border-radius: 20px; margin-top:30px;">
-        <a class="a" onclick="downloadnew()" href="https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175">Update</a>
-
+        <br>
+        <br>
+        <a class="a" href="https://www.icloud.com/shortcuts/f97b0389652c48dbb540d1fb48501175" onclick="downloadnew()">Update</a>
+        <br>
+        <br>
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
         <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote on r/Shortcuts</a>
         <div>
