--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-    <video id="player" autoplay muted loop>
+    <video id="player" autoplay muted loop playsinline>
         <source src="down.mp4" type="video/mp4">
     </video>
 
