--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Be Right Back</title>
+    </head>
 <body>
 
     <video id="player" autoplay muted loop playsinline>
