--- a/messagekit.html
+++ b/messagekit.html
@@ -71,6 +71,10 @@
             margin-top:-30px;
         }
         .a{
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
             background:linear-gradient(to bottom right, #FFB25F, #F49F43, #FF8500);
             height:75px;
             line-height: 75px;
