--- a/messagekit.html
+++ b/messagekit.html
@@ -100,7 +100,7 @@
         <br>
         <br>
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
-        <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote on r/Shortcuts</a>
+        <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote</a>
         <div>
         <div class="centered-div" id="failed" style="display: none;">
             <h2>That code didn't seem to work, refresh the page and try again.</h2>
@@ -142,16 +142,7 @@
         <h2>Thank you, Team MessageKit<img src="icon.svg" alt="Logo" width="6px"></h2>
         </div>
     </center>
-    <script>
-        var divWidth = document.body.clientWidth;
-        var text = $("#text");
-        var fontSize = 20;
-
-        while (text.width() > divWidth)
-          text.css("font-size", fontSize -= 0.5);
-
-        text.css("display", "inline");
-        
+    <script>        
         function submit(){
             const codes = [];
             const litecodes = [];
