--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/countdown.png" />
             <p data-aos="fade-up">
-                Tons of tools for iMessage (or anywhere you share stuff) including various spamming modes, scheduling messages, converting to GIF, changing the font of text, making QR codes, translating to other languages or binary, some ASCII art presets, sending the same message to multiple people but swapping the name based on the contact, text to speech, AI responses, slowly sending a chunk of text, and a bunch more.
+                A beautiful website to count down to any event. You can change the colors, date, and customize a ton of other options.
                 <br />
                 <br />
                 <br />
-                You can pin people to a preset for quick access to your favorite contacts, choose from a contact picker, or skip to bring up a share sheet at the end.
+                This project was made in HTML, CSS, and JS.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
@@ -98,6 +98,7 @@
         </div>
     </section>
 
+    <script src="script.js"></script>
 </body>
 </html>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
