--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
             <h2 data-aos="fade-up" style="padding-left:115px;">Siri Shortcut</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
             <p data-aos="fade-up">
-                Tons of tools for iMessage (or anywhere you share stuff) including various spamming modes, scheduling messages, converting to GIF, changing the font of text, making QR codes, translating to other languages or binary, some ASCII art presets, sending the same message to multiple people but swapping the name based on the contact, text to speech, AI responses, slowly sending a chunk of text, and a bunch more.
-                <br />
-                <br />
-                <br />
-                You can pin people to a preset for quick access to your favorite contacts, choose from a contact picker, or skip to bring up a share sheet at the end.
+                Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
