--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <br />
             <div id="playcontain">
                 <video id="player" autoplay muted loop playsinline>
-                    <source src="images/glowing.mp4" type="video/mp4">
+                    <source src="Images/glowing.mp4" type="video/mp4">
                 </video>
             </div>
             <i class="fa-solid fa-cross"></i>
