--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
         <section class="considering">
-            <h1>Let's make something cool together. <a style="color: #240200;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
+            <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
         </section>
         <section class="projectarea">
             <p>this portfolio is a work in progress. expect updates to come.</p>
