--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="Images/fav.ico">
+        <meta name="theme-color" content="#ff2d2d" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body id="body">
