--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="top" style="background-color: #F6EEE3">
             <div style="height: 100px; padding-top:100px;"><p style=" color:#F6EEE3">hi</p></div>
             <h1 style="color:red;" data-aos="fade-up" id="home">Hi, I'm<br /><span style="color:#000000; padding-top:70px; padding-bottom:70px; font-weight:900; font-size:30px;">Michael Dors</span></h1>
-            <p data-aos="fade-up" class="barcode">MICHAELDORS.COM</p>
+            <p data-aos="fade-up" class="barcode">MICHAELDORSWEB</p>
 
             <div class="marquee">
                 <p data-aos="fade-up">Websites | Designs | Video Editing | 3D Animations</p>
