--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <section>
         <div class="footer">
-            <p>created with <i class="fa-solid fa-heart"></i>, <i class="fa-solid fa-code"></i>, and <i class="fa-solid fa-photo-film"></i> by michaeldors</p>
+            <p>created with <i class="fa-solid fa-heart"></i>, <i class="fa-solid fa-code"></i>, and <i class="fa-solid fa-photo-film"></i></p>
             <br />
             <div id="playcontain">
                 <video id="player" autoplay muted loop playsinline>
