--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -7,10 +7,8 @@
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta name="theme-color" content="#8426ff" />
     <title>Countdown</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
-            crossorigin="anonymous"></script>
+
     <script src="Dependencies/confetti.js"></script>
-    <script src="Dependencies/blockadblock.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
@@ -63,40 +61,7 @@
         </div>
     </center>
 
-    <center class="hidden" id="cookiepopup" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); z-index: 10000;">
-        <div class="box">
-            <i style="font-size:50px; color:white; margin-right:20px;" class="fa-solid fa-shield"></i> <i style="font-size:50px; color:white" class="fa-solid fa-cookie-bite"></i> <i style="font-size:50px; color:white; margin-left:20px;" class="fa-solid fa-rectangle-ad"></i>
-            <h1 class="textelement">For your information...</h1>
-            <p style="margin-left: 100px; margin-right: 100px;" class="textelement">This site uses cookies to save your preferences and for advertisement purposes. To use Countdown, you must approve the use of cookies and our privacy policy. </p>
-            <br>
-            <br>
-            <a class="a2" onclick="acceptcookies()"><i class="fa-solid fa-circle-check"></i> Accept All</a>
-            <a class="a2 warning" onclick="rejectcookies()"><i class="fa-solid fa-circle-xmark"></i> Reject All</a>
 
-            <Br>
-            <br>
-            <br>
-            <br>
-            <a class="a2 outlinebutton" href="Information/cookiepolicy.html"><i class="fa-solid fa-cookie"></i> Cookie Policy</a>
-            <br>
-            <Br>
-            <br>
-            <br>
-            <a class="a2 outlinebutton" href="Information/privacypolicy.html"><i class="fa-solid fa-graduation-cap"></i> Privacy Policy</a>
-            <br>
-            <Br>
-            <br>
-        </div>
-    </center>
-
-    <center class="hidden" id="detectedpop" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); z-index: 10000;">
-        <div class="box">
-            <i style="font-size:50px; color:white;" class="fa-solid fa-triangle-exclamation"></i>
-            <h1 class="textelement">It Appears You're Blocking Ads</h1>
-            <p style="margin-left: 100px; margin-right: 100px;" class="textelement">This site is made possible for free by showing ads. Please whitelist Countdown from your ad blocker.</p>
-
-        </div>
-    </center>
 
     <center class="hidden" id="settings" style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
         <h1 class="textelement">Options</h1>
@@ -271,7 +236,7 @@
         </div>
     </center>
 
-    <center class="hidden" id="ad_container" style="border-radius: 20px; margin: 0; position: absolute; top: 88%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);"> <video id="ad" autoplay muted loop> <source src="ad.mp4" type="video/mp4"> </video> </center>
+    <center class="hidden" id="ad_container" style="border-radius: 20px; margin: 0; position: absolute; top: 88%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);"> <video id="ad" autoplay muted loop playsinline> <source src="ad.mp4" type="video/mp4"> </video> </center>
 
 </body>
 
@@ -1429,25 +1394,6 @@
         icon.src = 'icon.ico';
     }
 
-    function adBlockNotDetected() {
-
-    }
-    function adBlockDetected() {
-        document.getElementById("detectedpop").classList.remove("hidden");
-        document.getElementById("gear").remove();
-        document.getElementById("clock").remove();
-    }
-    if (typeof blockAdBlock === 'undefined') {
-        adBlockDetected();
-    } else {
-        blockAdBlock.onDetected(adBlockDetected);
-        blockAdBlock.onNotDetected(adBlockNotDetected);
-
-        blockAdBlock.on(true, adBlockDetected);
-        blockAdBlock.on(false, adBlockNotDetected);
-
-        blockAdBlock.on(true, adBlockDetected).onNotDetected(adBlockNotDetected);
-    }
 
 
     document.querySelector('#searchTypeToggle').addEventListener('click', function (event) {
@@ -1519,17 +1465,7 @@
 
     });
 
-    if (!getCookie("cookiesallowed")) {
-        document.getElementById("cookiepopup").classList.remove("hidden");
-        document.getElementById("preloader").classList.add("hidden");
-        document.getElementById("innergear").classList.add("hidden");
-        document.getElementById("ad").classList.add("hidden");
-        document.getElementById("cookiesrejected").classList.remove("hidden");
-    }
-    else {
-        document.getElementById("cookiesrejected").classList.add("hidden");
 
-    }
 
     updateoptions();
 
@@ -1628,54 +1564,23 @@
 
     function settings() {
 
-        if (document.getElementById("settings").classList.contains("hidden") && !document.getElementById("cookiepopup").classList.contains("hidden")) {
-            document.getElementById("cookiepopup").classList.add("hidden");
-            document.getElementById("clock").style.display = "";
-            document.getElementById("cookiepopup").classList.add("hidden");
-            document.getElementById("settings").classList.add("hidden");
-            document.querySelector(".backgroundframe").classList.remove("hidden");
-            document.getElementById("gear").classList.remove("hidden");
-            document.getElementById("innergear").classList.remove("hidden");
-
-            document.getElementById("preloader").classList.add("hidden");
-            document.getElementById("unfocused").classList.add("hidden");
-            document.getElementById("body").style.overflowY = 'hidden';
-
-            document.body.scrollTop = document.documentElement.scrollTop = 0;
-        }
-        else if (document.getElementById("settings").classList.contains("hidden")) {
-            if (getCookie("cookiesallowed")) {
-                document.getElementById("settings").classList.remove("hidden");
-                document.getElementById("cookiepopup").classList.add("hidden");
-
-            }
-            else {
-                document.getElementById("cookiepopup").classList.remove("hidden");
-                document.getElementById("settings").classList.add("hidden");
-
-            }
+        if (document.getElementById("settings").classList.contains("hidden")) {
+            document.getElementById("settings").classList.remove("hidden");
             document.getElementById("clock").style.display = "none";
             document.getElementById("gear").classList.add("hidden");
             document.getElementById("innergear").classList.add("hidden");
-
             document.getElementById("preloader").classList.add("hidden");
             document.getElementById("unfocused").classList.add("hidden");
-
-
             document.getElementById("body").style.overflowY = '';
             document.body.scrollTop = document.documentElement.scrollTop = 0;
         }
         else {
-
             document.getElementById("clock").style.display = "";
-            document.getElementById("cookiepopup").classList.add("hidden");
             document.getElementById("settings").classList.add("hidden");
             document.getElementById("gear").classList.remove("hidden");
             document.getElementById("innergear").classList.remove("hidden");
-
             document.getElementById("preloader").classList.add("hidden");
             document.getElementById("unfocused").classList.add("hidden");
-
             document.getElementById("body").style.overflowY = 'hidden';
             document.body.scrollTop = document.documentElement.scrollTop = 0;
         }
@@ -1947,38 +1852,9 @@
         }
         updateoptions();
     }
-    function acceptcookies() {
-        setCookie('cookiesallowed', 'true', '70');
-        document.getElementById("cookiepopup").classList.add("hidden");
-        document.getElementById("clock").style.display = "";
-        document.getElementById("gear").classList.remove("hidden");
-        document.getElementById("innergear").classList.remove("hidden");
-        document.getElementById("preloader").classList.add("hidden");
-        //document.getElementById("ad_container").classList.remove("hidden");
-        //document.getElementById("ad").classList.remove("hidden");
-        document.getElementById("unfocused").classList.add("hidden");
 
-        document.getElementById("body").style.overflowY = 'hidden';
-        document.body.scrollTop = document.documentElement.scrollTop = 0;
-        window.reload();
-    }
 
-    function rejectcookies() {
-        window.close();
-        //document.getElementById("cookiesrejected").classList.remove("hidden");
-        //document.getElementById("cookiepopup").classList.add("hidden");
-        //document.getElementById("clock").style.display = "";
-        //document.getElementById("gear").classList.remove("hidden");
-        //document.getElementById("innergear").classList.remove("hidden");
 
-        //document.getElementById("preloader").classList.add("hidden");
-        //document.getElementById("ad_container").classList.remove("hidden");
-        //document.getElementById("ad").classList.remove("hidden");
-        //document.getElementById("unfocused").classList.add("hidden");
-
-        //document.getElementById("body").style.overflowY = 'hidden';
-        //document.body.scrollTop = document.documentElement.scrollTop = 0;
-    }
     function coce() {
         if (getCookie('coce')) {
             eraseCookie('coce');
