--- a/messagekit.html
+++ b/messagekit.html
@@ -101,6 +101,11 @@
         <br>
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
         <a class="a" href="https://www.reddit.com/r/shortcuts/comments/18zi7t4/messagekit_stuff_you_wish_was_built_into_imessage/">Upvote</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2OU9BUputuk?si=LdZvU9mmDoprNBCx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <div>
         <div class="centered-div" id="failed" style="display: none;">
             <h2>That code didn't seem to work, refresh the page and try again.</h2>
