--- a/messagekit.html
+++ b/messagekit.html
@@ -105,7 +105,7 @@
         <br>
         <br>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2OU9BUputuk?si=LdZvU9mmDoprNBCx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe style="width:90%; border-radius:20px;" src="https://www.youtube.com/embed/2OU9BUputuk?si=LdZvU9mmDoprNBCx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <div>
         <div class="centered-div" id="failed" style="display: none;">
             <h2>That code didn't seem to work, refresh the page and try again.</h2>
