--- a/mcacountdown/Information/cookiepolicy.html
+++ b/mcacountdown/Information/cookiepolicy.html
@@ -17,26 +17,13 @@
 
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
         <h1>Cookie Policy</h1>
-        <p>Countdown utilizes cookies on the options/settings menu. Cookies are small files that store preferences, passwords, or other data in a browser. In our case, we use cookies to save your preferences in the options/settings menu.</p>
-        <p>Third parties, including Google, may utilize cookies through Google Ads to serve ads based on your visits to Countdown and other sites. Google's advertising cookies allow Google and their partners to serve you ads based on their visits to Countdown and other sites across the internet. You can opt-out of personalized ads by visiting <a class="aintext" href="https://www.google.com/settings/ads">Ads Settings</a> or to opt out of a third-party vendor's cookies for personalized ads, visit <a class="aintext" href="http://www.aboutads.info/choices/">www.aboutads.info</a>.</p>
-        <p>Countdown may use these cookies for the options menu:</p>
-        <Ul style="color:white">
-            <li><p>cookiesallowed - This cookie remembers that you have accepted cookies so you do not see the prompt each time you open the options menu.</p></li>
-            <li><p>memsav - This cookie saves the "Memory Saver" option.</p></li>
-            <li><p>coce - This cookie saves the “Disable Confetti” option.</p></li>
-            <li><p>atc - This cookie saves the “Disable Text Animation” option.</p></li>
-            <li><p>lcdu - This cookie saves the "Label Countdown Units" option.</p></li>
-            <li><p>day - This cookie saves the option to only include the amount of days in the countdown clock.</p></li>
-            <li><p>hour - This cookie saves the option to only include the amount of hours in the countdown clock.</p></li>
-            <li><p>minute - This cookie saves the option to only include the amount of minutes in the countdown clock.</p></li>
-            <li><p>second - This cookie saves the option to only include the amount of seconds in the countdown clock.</p></li>
-        </Ul>
+        <p>Countdown utilizes cookies to save your changes. Cookies are small files that store preferences, passwords, or other data in a browser. In our case, we use cookies to save your preferences in the options/settings menu.</p>
         <p>
             <br>
             Countdown uses cookies to improve the overall user experience, and give you more accessibility options and general settings. We only save cookies when a preference inside of the options/settings menu is enabled.
             <br>
             <br>
-            You can opt-out of cookies multiple ways. If you simply do not use the settings menu, you will not have any cookies placed on your device. If you have already enabled options, you can click the “Reset All” option in the options/settings menu and then reload the page, or individually disable each preference. In most browsers, you can also remove cookies through the browser UI.
+            You can opt-out of cookies multiple ways. If you simply do not use the settings menu, you will not have any cookies placed on your device. If you have already enabled options, you can click the "Reset All" option in the options/settings menu and then reload the page, or individually disable each preference. In most browsers, you can also remove cookies through the browser UI.
             <br>
             <br>
             If you have questions about cookies or anything else, feel free to reach out to us at contact@michaeldors.com
