--- a/mcacountdown/Information/dependencies.html
+++ b/mcacountdown/Information/dependencies.html
@@ -15,7 +15,7 @@
     <a class="aintext" href="../timer.html"><i style="color:white; font-size:20px;" class="fa-solid fa-house"></i></a>
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
 
-        <h1>Open Source Dependencies</h1>
+        <h1>Open Source Dependencies and Adapted Code</h1>
         <p>We could not have made this project possible without the many talented coders across the world who help others and contribute to open source libraries. Here are the open source projects we used to make countdown a great website!</p>
         <br />
         <br />
@@ -24,11 +24,12 @@
         <br />
         <br />
         <br />
-        <p>BlockAdBlock</p>
-        <a class="aintext" href="https://github.com/sitexw/BlockAdBlock">Visit Site</a>
+        <p>Pure CSS Apple Music animated background (adapted)</p>
+        <a class="aintext" href="https://codepen.io/futuricon/pen/mdybZzN">Visit Site</a>
         <br />
         <br />
         <br />
+    </center>
 
 </body>
 <style>
