--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -68,7 +68,6 @@
 
         <p class="textelement" style="font-size: 15px; color:#989898">
             <a style="margin-right:20px; font-family: 'Dosis' , sans-serif;" class="aintext" href="Information/cookiepolicy.html"><i class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
-            <a style="font-family: 'Dosis', sans-serif;" class="aintext" href="Information/privacypolicy.html"><i class="fa-solid fa-shield"></i> Privacy Policy</a>
             <a style="margin-left: 20px; font-family: 'Dosis', sans-serif;" class="aintext" href="Information/dependencies.html"><i class="fa-solid fa-file-code"></i> Open Source Dependencies</a>
         </p>
         <br>
@@ -1550,7 +1549,7 @@
                 document.getElementById("unfocused").classList.remove("hidden");
             }
             document.getElementById("preloader").classList.add("hidden");
-            document.getElementById("ad_container").remove();
+            document.getElementById("ad_container").classList.add("hidden");
             document.getElementById("gear").classList.add("hidden");
             document.getElementById("settings").classList.add("hidden");
         }
@@ -1570,6 +1569,7 @@
             document.getElementById("gear").classList.add("hidden");
             document.getElementById("innergear").classList.add("hidden");
             document.getElementById("preloader").classList.add("hidden");
+            document.getElementById("ad_container").classList.add("hidden");
             document.getElementById("unfocused").classList.add("hidden");
             document.getElementById("body").style.overflowY = '';
             document.body.scrollTop = document.documentElement.scrollTop = 0;
@@ -1582,6 +1582,8 @@
             document.getElementById("preloader").classList.add("hidden");
             document.getElementById("unfocused").classList.add("hidden");
             document.getElementById("body").style.overflowY = 'hidden';
+            document.getElementById("ad_container").classList.remove("hidden");
+
             document.body.scrollTop = document.documentElement.scrollTop = 0;
         }
 
@@ -1659,7 +1661,6 @@
         }
 
         document.getElementById("preloader").classList.add("hidden");
-
 
 
         var now = new Date().getTime();
