--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -1286,7 +1286,7 @@
 
 <script>
     document.body.scrollTop = document.documentElement.scrollTop = 0;
-
+    document.getElementById("ad_container").classList.remove("hidden");
 
     if (parameter('colorone')) {
         if (parameter('colorone') == "null") {
