--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -1175,9 +1175,9 @@
     }
 
     *::-webkit-scrollbar-thumb {
+        box-shadow: #8426ff 1px 1px 25px;
         background-color: #8426ff;
         border-radius: 14px;
-        border: 2px solid #0d0d0d;
     }
 
 
