--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="projects">
         <section class="projectarea">
-            <img data-aos="flip-up" style="overflow:hidden;" class="headerimgglow" src="headers/messagekit.png" />
+            <img data-aos="zoom-in" style="overflow:hidden;" class="headerimgglow" src="headers/messagekit.png" />
             <h1 data-aos="fade-up"><span>NEW</span>MessageKit</h1>
             <h2 data-aos="fade-up" style="padding-left:115px;">Siri Shortcut</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
@@ -62,7 +62,7 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
         <section class="projectarea">
-            <img data-aos="flip-up" style="overflow:hidden;" class="headerimgglow" src="headers/countdown.png" />
+            <img data-aos="zoom-in" style="overflow:hidden;" class="headerimgglow" src="headers/countdown.png" />
             <h1 data-aos="fade-up">Countdown</h1>
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/countdown.png" />
