--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -63,7 +63,7 @@
 
 
 
-    <center class="hidden" id="settings" style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
+    <center class="hidden" id="settings">
         <h1 class="textelement">Options</h1>
 
         <p class="textelement" style="font-size: 15px; color:#989898">
