--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -2325,7 +2325,7 @@
 
         var downloadLink = document.createElement('a');
         downloadLink.href = imageData;
-        downloadLink.download = 'image.png';
+        downloadLink.download = 'mdcountdownqrcode.png';
    
         document.body.appendChild(downloadLink);
         downloadLink.click();
